--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,6 @@
         <docker.plugin.version>0.43.0</docker.plugin.version>
 
         <versions-maven-plugin.version>2.3</versions-maven-plugin.version>
-        <spring.checkstyle.version>0.0.34</spring.checkstyle.version>
         <git.commit.version>2.2.5</git.commit.version>
     </properties>
 
@@ -80,6 +79,19 @@
 
         <pluginManagement>
             <plugins>
+                <!--代码编译指定版本插件-->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>${maven.compiler.version}</version>
+                    <configuration>
+                        <target>${maven.compiler.target}</target>
+                        <source>${maven.compiler.source}</source>
+                        <encoding>UTF-8</encoding>
+                        <skip>true</skip>
+                    </configuration>
+                </plugin>
+
                 <!--mvn versions:set -DprocessAllModules=true -DnewVersion=x.x.x-->
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
@@ -90,25 +102,13 @@
                     </configuration>
                 </plugin>
 
+                <!--打包关联最新 git commit 信息插件-->
                 <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>buildnumber-maven-plugin</artifactId>
-                    <version>1.4</version>
-                    <executions>
-                        <execution>
-                            <phase>validate</phase>
-                            <goals>
-                                <goal>create</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <shortRevisionLength>7</shortRevisionLength>
-                        <doCheck>false</doCheck>
-                        <doUpdate>false</doUpdate>
-                    </configuration>
+                    <groupId>pl.project13.maven</groupId>
+                    <artifactId>git-commit-id-plugin</artifactId>
+                    <version>${git.commit.version}</version>
                 </plugin>
-
+                <!--mvn docker:build-->
                 <plugin>
                     <groupId>io.fabric8</groupId>
                     <artifactId>docker-maven-plugin</artifactId>
@@ -119,8 +119,7 @@
                         <pushRegistry>${docker.registry}</pushRegistry>
                         <images>
                             <image>
-                                <!--<name>${docker.registry}/${docker.namespace}/${project.name}:${project.version}</name>-->
-                                <name>${docker.registry}/${docker.namespace}/${project.name}:${buildNumber}</name>
+                                <name>${docker.registry}/${docker.namespace}/${project.artifactId}:${project.version}</name>
                                 <build>
                                     <dockerFile>${project.basedir}/Dockerfile</dockerFile>
                                 </build>
@@ -128,36 +127,21 @@
                         </images>
                     </configuration>
                 </plugin>
-
             </plugins>
         </pluginManagement>
 
         <plugins>
-            <!--代码格式插件，默认使用spring 规则-->
-            <plugin>
-                <groupId>io.spring.javaformat</groupId>
-                <artifactId>spring-javaformat-maven-plugin</artifactId>
-                <version>${spring.checkstyle.version}</version>
-            </plugin>
             <!--代码编译指定版本插件-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.version}</version>
-                <configuration>
-                    <target>${maven.compiler.target}</target>
-                    <source>${maven.compiler.source}</source>
-                    <encoding>UTF-8</encoding>
-                    <skip>true</skip>
-                </configuration>
             </plugin>
             <!--打包关联最新 git commit 信息插件-->
             <plugin>
                 <groupId>pl.project13.maven</groupId>
                 <artifactId>git-commit-id-plugin</artifactId>
-                <version>${git.commit.version}</version>
             </plugin>
-            <!--docker构建镜像-->
+            <!--mvn docker:build-->
             <plugin>
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
@@ -170,26 +154,7 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>buildnumber-maven-plugin</artifactId>
-            </plugin>
-            <!-- create jar -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                        </manifest>
-                        <manifestEntries>
-                            <Implementation-Version>${project.version}-${buildNumber}-${maven.build.timestamp}</Implementation-Version>
-                        </manifestEntries>
-                    </archive>
-                </configuration>
-            </plugin>
-
+            <!-- create SpringBoot executable application jar -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
